--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -100,22 +100,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-4-0d7d6c59f8f0>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-0d7d6c59f8f0>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    def __init__(self, first, last, email, rides_taken):\u001b[0m\n\u001b[0m                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# Define Passenger Class Here\n",
     "class Passenger():\n",
-    "    def __init__(self, first, last, email, rides_taken):"
+    "    def __init__(self, first, last, email, rides_taken)"
    ]
   },
   {
