Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -116,7 +116,9 @@
     "# Define Passenger Class Here\n",
     "class Passenger():\n",
     "    def __init__(self, first, last, email, rides_taken):\n",
-    "        self.fir"
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.email "
    ]
   },
   {
