--- a/index.ipynb
+++ b/index.ipynb
@@ -128,7 +128,7 @@
    },
    "outputs": [],
    "source": [
-    "jerry = Passenger(jerry, seinfeld, ) # initialize Mr. Seinfeld here\n",
+    "jerry = Passenger('Jerry','' ) # initialize Mr. Seinfeld here\n",
     "print(jerry.first) # \"Jerry\"\n",
     "print(jerry.last) # \"Seinfeld\"\n",
     "print(jerry.email) # \"jerry.seinfeld@mailinator.com\"\n",
